address pylint issues

--- a/.pylintrc
+++ b/.pylintrc
@@ -90,7 +90,8 @@ disable=raw-checker-failed,
         too-many-locals,
         too-many-statements,
         too-many-branches,
-        too-many-instance-attributes
+        too-many-instance-attributes,
+        PyLintPython3_E5110
 
 
 # Enable the message, report, category or checker with the given id(s). You can
