--- a/.pylintrc
+++ b/.pylintrc
@@ -91,6 +91,7 @@ disable=raw-checker-failed,
         too-many-statements,
         too-many-branches,
         too-many-instance-attributes,
+        unused-import,
         PyLintPython3_E5110
 
 
