--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,9 @@ requires =
 [testenv:py{38,39,310}-lock]
 allowlist_externals =
     cp
+    ls
+    pwd
+    rm
     time
 changedir =
     {env:LOCKDIR}
@@ -28,9 +31,14 @@ setenv =
 skip_install =
     true
 commands =
+    pwd
+    ls -l
+    rm -f {envname}*.txt
+    ls -l
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
     time conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
+    ls -l
 
 
 [testenv:py{38,39,310}-{linux,osx,win}-env]
