--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -106,6 +106,11 @@ jobs:
         name: lock-artifacts
         path: ${{ github.workspace }}/requirements/locks
 
+    - run: |
+        ls -l *.txt
+        sha256sum *.txt
+      working-directory: ${{ github.workspace }}/requirements/locks
+
     - name: "generate token"
       uses: tibdex/github-app-token@v1
       id: generate-token
