--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ allowlist_externals =
     rm
     time
     sha256sum
+    bash
 changedir =
     {env:LOCKDIR}
 conda_channels =
@@ -34,14 +35,13 @@ skip_install =
 commands =
     pwd
     ls -l
-    rm -f {envname}\*.txt
     ls -l
-    sha256sum *.txt
+    /bin/bash -c "sha256sum *.txt"
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
     time conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
     ls -l
-    sha256sum \*.txt
+    /bin/bash -c "sha256sum *.txt"
 
 
 [testenv:py{38,39,310}-{linux,osx,win}-env]
