--- a/tox.ini
+++ b/tox.ini
@@ -35,7 +35,7 @@ skip_install =
 commands =
     pwd
     ls -l
-    ls -l
+    /bin/bash -c "rm -f {envname}*.txt"
     /bin/bash -c "sha256sum *.txt"
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
