--- a/tox.ini
+++ b/tox.ini
@@ -35,6 +35,7 @@ skip_install =
 commands =
     pwd
     ls -l
+    /bin/bash -c "sha256sum *.txt"
     /bin/bash -c "rm -f {envname}*.txt"
     /bin/bash -c "sha256sum *.txt"
     cp {env:YMLFILE} {env:TMPFILE}
