update pip install requires

--- a/setup.cfg
+++ b/setup.cfg
@@ -75,7 +75,7 @@ install_requires =
     cartopy>=0.20
     click
     click-default-group
-    netCDF4<1.6.1
+    netCDF4
     pooch
     pykdtree
     pyproj>=3.3
@@ -101,7 +101,7 @@ docs =
     sphinx
     sphinx-copybutton
     jupyter-sphinx
-    pydata-sphinx-theme<0.9
+    pydata-sphinx-theme
     pythreejs
 dev =
     pre-commit
