--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ exclude .gitignore
 exclude .pre-commit-config.yaml
 exclude .pylintrc
 exclude .readthedocs.yml
+include CITATION.cff
 exclude codecov.yml
 prune branding
 prune docs
