--- a/setup.cfg
+++ b/setup.cfg
@@ -79,14 +79,14 @@ install_requires =
     pooch
     pykdtree
     pyproj>=3.3
-    pyvista
+    pyvista==0.37.0
     pyvistaqt
-    vtk
+    vtk==9.2.2
 package_dir =
     =src
 packages = find_namespace:
 python_requires =
-    >=3.8
+    >=3.8,<3.11
 zip_safe = False 
 
 [options.entry_points]
