--- a/setup.cfg
+++ b/setup.cfg
@@ -78,7 +78,7 @@ install_requires =
     netCDF4
     pooch
     pyproj>=3.3
-    pyvista==0.37.0
+    pyvista>=0.38
     pyvistaqt
     vtk==9.2.2
 package_dir =
@@ -101,7 +101,6 @@ docs =
     sphinx-copybutton
     jupyter-sphinx
     pydata-sphinx-theme
-    pythreejs
 dev =
     pre-commit
 test =
