--- a/setup.cfg
+++ b/setup.cfg
@@ -78,7 +78,7 @@ install_requires =
     netCDF4
     pooch
     pyproj>=3.3
-    pyvista
+    pyvista>=0.38
     pyvistaqt
     vtk==9.2.2
 package_dir =
