--- a/.github/workflows/ci-locks.yml
+++ b/.github/workflows/ci-locks.yml
@@ -63,7 +63,7 @@ jobs:
         channel-priority: true
         auto-update-conda: true
         activate-environment: ${{ env.ENV_NAME }}
-        use-only-tar-bz2: true
+        #use-only-tar-bz2: true
 
     - name: "conda environment cache"
       uses: ./.github/workflows/composite/conda-env-cache
