--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -16,7 +16,7 @@ dependencies:
   - pooch
   - pyproj >=3.3
   - pyvista
-  - pyvistaqt >=0.38
+  - pyvistaqt >0.37
   - vtk =9.2.2
 
 # pantry dependencies
