--- a/setup.cfg
+++ b/setup.cfg
@@ -79,12 +79,12 @@ install_requires =
     pyproj>=3.3
     pyvista==0.37.0
     pyvistaqt
-    vtk==9.2.2
+    vtk
 package_dir =
     =src
 packages = find_namespace:
 python_requires =
-    >=3.8,<3.11
+    >=3.8
 zip_safe = False 
 
 [options.entry_points]
