--- a/setup.cfg
+++ b/setup.cfg
@@ -43,6 +43,7 @@ classifiers =
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Topic :: Scientific/Engineering :: Atmospheric Science
 description = Cartographic rendering and mesh analytics powered by PyVista
 long_description = file: README.md
