--- a/requirements/geovista.yml
+++ b/requirements/geovista.yml
@@ -15,7 +15,7 @@ dependencies:
   - click-default-group
   - pooch
   - pyproj >=3.3
-  - pyvista =0.37.0
+  - pyvista >=0.38
   - vtk =9.2.2
 
 # pantry dependencies
