--- a/.pylintrc
+++ b/.pylintrc
@@ -20,7 +20,9 @@ fail-on=
 fail-under=10.0
 
 # Files or directories to be skipped. They should be base names, not paths.
-ignore=CVS,_version.py
+ignore=CVS,
+       _version.py,
+       CODE_OF_CONDUCT.md
 
 # Add files or directories matching the regex patterns to the ignore-list. The
 # regex matches against paths and can be in Posix or Windows format.
