--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,7 @@ exclude =
 [tox]
 requires =
     tox-conda
-    tox-run-command
- 
+
  
 [testenv:py{38,39,310,311}-lock]
 allowlist_externals =
@@ -84,6 +83,7 @@ description =
     Create an environment only containing geovista dependencies.
 skip_install =
     true
+commands = {posargs}
 
 
 [testenv:py{38,39,310,311}-{linux,osx,win}-tests]
