--- a/tox.ini
+++ b/tox.ini
@@ -34,6 +34,7 @@ exclude =
 [tox]
 requires =
     tox-conda
+    tox-run-command
 
  
 [testenv:py{38,39,310,311}-lock]
@@ -83,7 +84,6 @@ description =
     Create an environment only containing geovista dependencies.
 skip_install =
     true
-commands = {posargs}
 
 
 [testenv:py{38,39,310,311}-{linux,osx,win}-tests]
