--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -2,49 +2,56 @@
 # See https://pre-commit.com/hooks.html for more hooks
 
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: "v4.4.0"
     hooks:
-        # Prevent giant files from being committed.
-    -   id: check-added-large-files
-        # Check whether files parse as valid Python.
-    -   id: check-ast
-        # Check for file name conflicts on case-insensitive file-systems.
-    -   id: check-case-conflict
-        # Check for files that contain merge conflict strings.
-    -   id: check-merge-conflict
-        # Check for debugger imports and py37+ `breakpoint()` calls in Python source.
-    -   id: debug-statements
-        # Check TOML file syntax.
-    -   id: check-toml
-        # Check YAML file syntax.
-    -   id: check-yaml
-        # Don't commit to main branch.
-#    -   id: no-commit-to-branch
+      # Prevent giant files from being committed.
+    - id: check-added-large-files
+      # Check whether files parse as valid Python.
+    - id: check-ast
+      # Check for file name conflicts on case-insensitive file-systems.
+    - id: check-case-conflict
+      # Check for files that contain merge conflict strings.
+    - id: check-merge-conflict
+      # Check for debugger imports and py37+ `breakpoint()` calls in Python source.
+    - id: debug-statements
+      # Check TOML file syntax.
+    - id: check-toml
+      # Check YAML file syntax.
+    - id: check-yaml
+      # Don't commit to main branch.
+#    - id: no-commit-to-branch
 
--   repo: https://github.com/psf/black
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.3.1
+    hooks:
+      - id: pyupgrade
+        args:
+          - '--py38-plus'
+
+  - repo: https://github.com/psf/black
     rev: "23.1.0"
     hooks:
-    -   id: black
+      - id: black
         types: [file, python]
         args: [--config=./pyproject.toml]
 
--   repo: https://github.com/PyCQA/flake8
+  - repo: https://github.com/PyCQA/flake8
     rev: "6.0.0"
     hooks:
-    -   id: flake8
+      - id: flake8
         types: [file, python]
         args: [--config=./tox.ini]
 
--   repo: https://github.com/PyCQA/isort
+  - repo: https://github.com/PyCQA/isort
     rev: "5.12.0"
     hooks:
-    -   id: isort
+      - id: isort
         types: [file, python]
         args: [--filter-files]
 
--   repo: https://github.com/aio-libs/sort-all
+  - repo: https://github.com/aio-libs/sort-all
     rev: "v1.2.0"
     hooks:
-    -   id: sort-all
+      - id: sort-all
         types: [file, python]
