--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,12 +22,12 @@ repos:
       # Don't commit to main branch.
 #    - id: no-commit-to-branch
 
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.3.1
+  - repo: https://github.com/charliermarsh/ruff-pre-commit
+    rev: "v0.0.253"
     hooks:
-      - id: pyupgrade
-        args:
-          - '--py38-plus'
+      - id: ruff
+        types: [file, python]
+        args: [--fix]
 
   - repo: https://github.com/psf/black
     rev: "23.1.0"
@@ -35,13 +35,6 @@ repos:
       - id: black
         types: [file, python]
         args: [--config=./pyproject.toml]
-
-  - repo: https://github.com/PyCQA/flake8
-    rev: "6.0.0"
-    hooks:
-      - id: flake8
-        types: [file, python]
-        args: [--config=./tox.ini]
 
   - repo: https://github.com/PyCQA/isort
     rev: "5.12.0"
