--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,10 @@ ignore = [
 ]
 
 
+[tool.codespell]
+ignore-words-list = "whet"
+
+
 [tool.isort]
 force_sort_within_sections = "True"
 known_first_party = "geovista"
