install libgl1-mesa-glx

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -68,6 +68,11 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: "install mesa opengl"
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libgl1-mesa-glx
+
     - name: "environment configure"
       env:
         # Maximum cache period (in weeks) before forcing a cache refresh.
