--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -68,10 +68,8 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: "install mesa opengl"
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgl1-mesa-glx
+    - name: configure headless display
+      uses: pyvista/setup-headless-display-action@v1
 
     - name: "environment configure"
       env:
