--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -87,10 +87,8 @@ jobs:
         name: pypi-artifacts
         path: ${{ github.workspace }}/dist
 
-    - name: "install mesa opengl"
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libgl1-mesa-glx
+    - name: configure headless display
+      uses: pyvista/setup-headless-display-action@v1
 
     - name: "environment configure"
       env:
