--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -90,6 +90,11 @@ jobs:
     - name: configure headless display
       uses: pyvista/setup-headless-display-action@v1
 
+    - name: configure mesa egl
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libegl-dev
+
     - name: "environment configure"
       env:
         # Maximum cache period (in weeks) before forcing a cache refresh.
