Generate lock files from actual conda environment.

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,6 @@ conda_create_args =
     --override-channels
 conda_deps =
     pip
-    conda-lock
 description =
     Create explicit environment specification conda lock files for geovista dependencies.
 platform =
@@ -25,12 +24,18 @@ setenv =
     LOCKDIR = {toxinidir}{/}requirements{/}locks
     TMPFILE = {envtmpdir}{/}geovista.yml
     YMLFILE = {toxinidir}{/}requirements{/}geovista.yml
+    ENVNAME = tmp-locks
 skip_install =
     true
 commands =
     cp {env:YMLFILE} {env:TMPFILE}
     python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
-    time conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
+    time conda env create --name {env:ENVNAME} --file {env:TMPFILE} {posargs}
+    python -c \
+    'from subprocess import run;\
+     output_file = open("{envname}-linux-64.txt", "w");\
+     run(["conda", "list", "--name={env:ENVNAME}", "--explicit"], stdout=output_file)'
+    conda remove -n {env:ENVNAME} --all -y
 
 
 [testenv:py{38,39,310,311}-{linux,osx,win}-env]
