--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,6 @@ classifiers = [
     "Natural Language :: English",
     "Operating System :: OS Independent",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -48,7 +47,7 @@ keywords = [
 ]
 license.file = "LICENSE"
 name = "geovista"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 
 
 [project.urls]
@@ -63,7 +62,7 @@ geovista = "geovista.cli:main"
 
 [tool.black]
 line-length = 88
-target-version = ["py38", "py39", "py310", "py311"]
+target-version = ["py39", "py310", "py311"]
 include = '\.pyi?$'
 
 
@@ -87,7 +86,7 @@ testpaths = "tests"
 
 [tool.ruff]
 line-length = 88
-target-version = "py38"
+target-version = "py39"
 select = [
     # pyflakes
     "F",
