--- a/tox.ini
+++ b/tox.ini
@@ -6,63 +6,53 @@ requires =
 
 [testenv:py{39,310,311}-lock]
 allowlist_externals =
-    cp
-    time
-changedir =
-    {env:LOCKDIR}
+    conda
 conda_channels =
     conda-forge
 conda_create_args =
     --override-channels
 conda_deps =
     pip
-    conda-lock
+    mamba
 description =
     Create explicit environment specification conda lock files for geovista dependencies.
 platform =
-    linux|darwin
+    linux
 setenv =
-    LOCKDIR = {toxinidir}{/}requirements{/}locks
-    TMPFILE = {envtmpdir}{/}geovista.yml
-    YMLFILE = {toxinidir}{/}requirements{/}geovista.yml
+    LOCK = {toxinidir}{/}requirements{/}locks{/}{envname}-linux-64.txt
+    YAML = {toxinidir}{/}requirements{/}geovista.yml
 skip_install =
     true
 commands =
-    cp {env:YMLFILE} {env:TMPFILE}
-    python -c 'from sys import version_info as v; fh = open("{env:TMPFILE}", "a"); fh.write(f"\n  - python =\{v.major\}.\{v.minor\}\n")'
-    time conda-lock --channel conda-forge --kind explicit --file {env:TMPFILE} --platform linux-64 --filename-template "{envname}-\{platform\}.txt" {posargs}
+    # opt-out from conda-lock as require Core Dependency Tree (CDT) for OpenGL
+    mamba env remove --name {envname}
+    mamba env create --name {envname} --file {env:YAML}
+    # tox doesn't support shell redirection
+    python -c 'import subprocess; subprocess.run(["mamba", "list", "-n={envname}", "--explicit"], stdout=open("{env:LOCK}", "w"))'
 
 
-[testenv:py{39,310,311}-{linux,osx,win}-env]
+[testenv:py{39,310,311}-env]
 conda_spec =
-    py39-linux: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
-    py310-linux: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
-    py311-linux: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
-    py39-osx: {toxinidir}{/}requirements{/}locks{/}py39-lock-osx-64.txt
-    py310-osx: {toxinidir}{/}requirements{/}locks{/}py310-lock-osx-64.txt
-    py311-osx: {toxinidir}{/}requirements{/}locks{/}py311-lock-osx-64.txt
-    py39-win: {toxinidir}{/}requirements{/}locks{/}py39-lock-win-64.txt
-    py310-win: {toxinidir}{/}requirements{/}locks{/}py310-lock-win-64.txt
-    py311-win: {toxinidir}{/}requirements{/}locks{/}py311-lock-win-64.txt
+    py39: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
+    py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+    py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
 description =
     Create an environment only containing geovista dependencies.
+platform =
+    linux
 skip_install =
     true
 
 
-[testenv:py{39,310,311}-{linux,osx,win}-tests]
+[testenv:py{39,310,311}-tests]
 conda_spec =
-    py39-linux: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
-    py310-linux: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
-    py311-linux: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
-    py39-osx: {toxinidir}{/}requirements{/}locks{/}py39-lock-osx-64.txt
-    py310-osx: {toxinidir}{/}requirements{/}locks{/}py310-lock-osx-64.txt
-    py311-osx: {toxinidir}{/}requirements{/}locks{/}py311-lock-osx-64.txt
-    py39-win: {toxinidir}{/}requirements{/}locks{/}py39-lock-win-64.txt
-    py310-win: {toxinidir}{/}requirements{/}locks{/}py310-lock-win-64.txt
-    py311-win: {toxinidir}{/}requirements{/}locks{/}py311-lock-win-64.txt
+    py39: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
+    py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+    py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
 description =
     Perform geovista unit/integration tests.
+platform =
+    linux
 passenv =
     CODECOV_TOKEN
     POST_COMMAND
@@ -73,21 +63,17 @@ commands =
     {env:POST_COMMAND:}
 
 
-[testenv:py{39,310,311}-{linux,osx-win}-doc-{build,linkcheck,tests}]
+[testenv:py{39,310,311}-doc-{build,linkcheck,tests}]
 conda_spec =
-    py39-linux: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
-    py310-linux: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
-    py311-linux: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
-    py39-osx: {toxinidir}{/}requirements{/}locks{/}py39-lock-osx-64.txt
-    py310-osx: {toxinidir}{/}requirements{/}locks{/}py310-lock-osx-64.txt
-    py311-osx: {toxinidir}{/}requirements{/}locks{/}py311-lock-osx-64.txt
-    py39-win: {toxinidir}{/}requirements{/}locks{/}py39-lock-win-64.txt
-    py310-win: {toxinidir}{/}requirements{/}locks{/}py310-lock-win-64.txt
-    py311-win: {toxinidir}{/}requirements{/}locks{/}py311-lock-win-64.txt
+    py39: {toxinidir}{/}requirements{/}locks{/}py39-lock-linux-64.txt
+    py310: {toxinidir}{/}requirements{/}locks{/}py310-lock-linux-64.txt
+    py311: {toxinidir}{/}requirements{/}locks{/}py311-lock-linux-64.txt
 description =
     Build, test and link-check the geovista documentation.
 envdir =
     {toxworkdir}{/}docs
+platform =
+    linux
 setenv =
     doc-build: BUILDER = html
     doc-linkcheck: BUILDER = linkcheck
