--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -75,7 +75,6 @@ jobs:
       fail-fast: false
       matrix:
         version: ["py39", "py310", "py311"]
-        session: ["env"]
 
     steps:
     - uses: actions/checkout@v3
@@ -86,14 +85,6 @@ jobs:
       with:
         name: pypi-artifacts
         path: ${{ github.workspace }}/dist
-
-    - name: configure headless display
-      uses: pyvista/setup-headless-display-action@v1
-
-    - name: configure mesa egl
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libegl-dev
 
     - name: "environment configure"
       env:
@@ -139,18 +130,12 @@ jobs:
         cache_build: 0
         lock_file: ${{ env.LOCK_FILE }}
 
-    - name: "check mesa"
-      run: |
-        ldconfig -p | grep -i libegl
-
     - name: "test wheel (${{ matrix.version }})"
-      env:
-        TESTENV: "${{ matrix.version }}-linux-${{ matrix.session }}"
       run: |
         WHEEL=$(ls -1 dist/*.whl)
-        tox -e ${{ env.TESTENV }} --run-command "python -m pip uninstall --yes ${WHEEL}"
-        tox -e ${{ env.TESTENV }} --run-command "python -m pip install --no-deps ${WHEEL}"
-        tox -e ${{ env.TESTENV }} --run-command "python -c 'import geovista; print(geovista.__version__)'"
+        tox -e ${{ matrix.version }}-env --run-command "python -m pip uninstall --yes ${WHEEL}"
+        tox -e ${{ matrix.version }}-env --run-command "python -m pip install --no-deps ${WHEEL}"
+        tox -e ${{ matrix.version }}-env --run-command "python -c 'import geovista; print(geovista.__version__)'"
 
 
   show-artifacts:
