--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ requires =
 
 [testenv:py{39,310,311}-lock]
 allowlist_externals =
-    conda
+    cp
 conda_channels =
     conda-forge
 conda_create_args =
@@ -20,13 +20,17 @@ platform =
     linux
 setenv =
     LOCK = {toxinidir}{/}requirements{/}locks{/}{envname}-linux-64.txt
+    WORK = {envtmpdir}{/}geovista.yml
     YAML = {toxinidir}{/}requirements{/}geovista.yml
 skip_install =
     true
 commands =
+    # inject python version pin
+    cp {env:YAML} {env:WORK}
+    python -c 'from sys import version_info as v; open("{env:WORK}", "a").write(f"\n - python =\{v.major\}.\{v.minor\}\n")'
     # opt-out from conda-lock as require Core Dependency Tree (CDT) for OpenGL
     mamba env remove --name {envname}
-    mamba env create --name {envname} --file {env:YAML}
+    mamba env create --name {envname} --file {env:WORK}
     # tox doesn't support shell redirection
     python -c 'import subprocess; subprocess.run(["mamba", "list", "-n={envname}", "--explicit"], stdout=open("{env:LOCK}", "w"))'
 
